test/2/type/label-extraneous.err
test/2/type/label-extraneous.ploy:3:14-23: type error: call argument field #0 has label `i`; domain field has no label. argument type: (i:Int j:Int)
| main = exit.f(i=0 j=0)
               ~~~~~~~~~
test/2/type/label-extraneous.ploy:3:13-14: note: domain type: (Int Int)
| main = exit.f(i=0 j=0)
              ~
